# workspacer

./: Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.github/workflows/: ci.yaml  release.yaml
src/: agents.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/shell/: init.sh
src/tui/: mod.rs
src/workspace/: mod.rs
tests/: integration_test.rs
