[package]
name = "workspacer"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
anstyle = "1.0"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "color"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.6"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.26.0"
